{
  "version": 4,
  "terraform_version": "1.4.1",
  "serial": 105,
  "lineage": "4a8d1b3f-9d75-2000-415f-283b4aaed615",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d73a0171590dae9d",
            "domain": "vpc",
            "id": "eipalloc-0d73a0171590dae9d",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-65-1-228-4.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.1.228.4",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip1"
            },
            "tags_all": {
              "Name": "eip1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c6e52745887f5521",
            "domain": "vpc",
            "id": "eipalloc-0c6e52745887f5521",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-126-47-182.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.126.47.182",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip2"
            },
            "tags_all": {
              "Name": "eip2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0376ec8eacdf70aae",
            "arn": "arn:aws:ec2:ap-south-1:665393310048:instance/i-01794bf88f23b86ba",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01794bf88f23b86ba",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e4d8ecd8b3cbb117",
            "private_dns": "ip-10-0-1-164.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.164",
            "public_ip": "13.232.49.126",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0610511e898b4bea9",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04bc3b3f8ede3d9d5",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05b96c0a50e8ed4e1"
            ]
          },
          "dependencies": [
            "aws_subnet.pubsub1a",
            "aws_vpc.tierdemo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:665393310048:internet-gateway/igw-0531bd82aea75b269",
            "id": "igw-0531bd82aea75b269",
            "owner_id": "665393310048",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-0ff217994afdfe104"
          },
          "dependencies": [
            "aws_vpc.tierdemo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d73a0171590dae9d",
            "connectivity_type": "public",
            "id": "nat-094f2769ce62e3beb",
            "network_interface_id": "eni-0ac2ea62a483ba113",
            "private_ip": "10.0.1.222",
            "public_ip": "65.1.228.4",
            "subnet_id": "subnet-04bc3b3f8ede3d9d5",
            "tags": {
              "Name": "gw NAT1"
            },
            "tags_all": {
              "Name": "gw NAT1"
            }
          },
          "dependencies": [
            "aws_eip.eip1",
            "aws_internet_gateway.igw",
            "aws_subnet.pubsub1a",
            "aws_vpc.tierdemo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c6e52745887f5521",
            "connectivity_type": "public",
            "id": "nat-06b873b778ea4e40e",
            "network_interface_id": "eni-0ea6fb0afbf4a21cd",
            "private_ip": "10.0.2.67",
            "public_ip": "13.126.47.182",
            "subnet_id": "subnet-00e0f2f9463185fb7",
            "tags": {
              "Name": "gw NAT2"
            },
            "tags_all": {
              "Name": "gw NAT2"
            }
          },
          "dependencies": [
            "aws_eip.eip2",
            "aws_internet_gateway.igw",
            "aws_subnet.pubsub1b",
            "aws_vpc.tierdemo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:665393310048:route-table/rtb-00b9b5e92045828c1",
            "id": "rtb-00b9b5e92045828c1",
            "owner_id": "665393310048",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-094f2769ce62e3beb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff217994afdfe104"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip1",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.natgw1",
            "aws_subnet.pubsub1a",
            "aws_vpc.tierdemo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:665393310048:route-table/rtb-06e347dbeb7d9d0f3",
            "id": "rtb-06e347dbeb7d9d0f3",
            "owner_id": "665393310048",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-06b873b778ea4e40e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff217994afdfe104"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip2",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.natgw2",
            "aws_subnet.pubsub1b",
            "aws_vpc.tierdemo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:665393310048:route-table/rtb-0926999fc446149f4",
            "id": "rtb-0926999fc446149f4",
            "owner_id": "665393310048",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0531bd82aea75b269",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff217994afdfe104"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.tierdemo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-association-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09dfabddb74bbcf05",
            "route_table_id": "rtb-00b9b5e92045828c1",
            "subnet_id": "subnet-0b1516fe718fd1134"
          },
          "dependencies": [
            "aws_eip.eip1",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.natgw1",
            "aws_route_table.private-rt1a",
            "aws_subnet.prisub2a",
            "aws_subnet.pubsub1a",
            "aws_vpc.tierdemo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-association-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0198fe1ec912278fd",
            "route_table_id": "rtb-06e347dbeb7d9d0f3",
            "subnet_id": "subnet-0105913a650f7ad26"
          },
          "dependencies": [
            "aws_eip.eip2",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.natgw2",
            "aws_route_table.private-rt1b",
            "aws_subnet.prisub2b",
            "aws_subnet.pubsub1b",
            "aws_vpc.tierdemo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-association-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f401452c83020bd",
            "route_table_id": "rtb-0926999fc446149f4",
            "subnet_id": "subnet-04bc3b3f8ede3d9d5"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-rt",
            "aws_subnet.pubsub1a",
            "aws_vpc.tierdemo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-association-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-060f4bd1246d7c99a",
            "route_table_id": "rtb-0926999fc446149f4",
            "subnet_id": "subnet-00e0f2f9463185fb7"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-rt",
            "aws_subnet.pubsub1b",
            "aws_vpc.tierdemo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prisub2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:665393310048:subnet/subnet-0b1516fe718fd1134",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1516fe718fd1134",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "665393310048",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prisub2a"
            },
            "tags_all": {
              "Name": "prisub2a"
            },
            "vpc_id": "vpc-0ff217994afdfe104"
          },
          "dependencies": [
            "aws_vpc.tierdemo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prisub2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:665393310048:subnet/subnet-0105913a650f7ad26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0105913a650f7ad26",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "665393310048",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prisub2b"
            },
            "tags_all": {
              "Name": "prisub2b"
            },
            "vpc_id": "vpc-0ff217994afdfe104"
          },
          "dependencies": [
            "aws_vpc.tierdemo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prisub3a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:665393310048:subnet/subnet-057e726da075167ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-057e726da075167ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "665393310048",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prisub3a"
            },
            "tags_all": {
              "Name": "prisub3a"
            },
            "vpc_id": "vpc-0ff217994afdfe104"
          },
          "dependencies": [
            "aws_vpc.tierdemo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prisub3b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:665393310048:subnet/subnet-0136c5d45b4b3a858",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0136c5d45b4b3a858",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "665393310048",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prisub3b"
            },
            "tags_all": {
              "Name": "prisub3b"
            },
            "vpc_id": "vpc-0ff217994afdfe104"
          },
          "dependencies": [
            "aws_vpc.tierdemo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsub1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:665393310048:subnet/subnet-04bc3b3f8ede3d9d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04bc3b3f8ede3d9d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "665393310048",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pubsub1a"
            },
            "tags_all": {
              "Name": "pubsub1a"
            },
            "vpc_id": "vpc-0ff217994afdfe104"
          },
          "dependencies": [
            "aws_vpc.tierdemo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsub1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:665393310048:subnet/subnet-00e0f2f9463185fb7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e0f2f9463185fb7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "665393310048",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pubsub1b"
            },
            "tags_all": {
              "Name": "pubsub1b"
            },
            "vpc_id": "vpc-0ff217994afdfe104"
          },
          "dependencies": [
            "aws_vpc.tierdemo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tierdemo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:665393310048:vpc/vpc-0ff217994afdfe104",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07e330fa0bf46720a",
            "default_route_table_id": "rtb-0f524a8d3f19b7e74",
            "default_security_group_id": "sg-05b96c0a50e8ed4e1",
            "dhcp_options_id": "dopt-0f778ca097f569141",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ff217994afdfe104",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f524a8d3f19b7e74",
            "owner_id": "665393310048",
            "tags": {
              "Name": "tierdemovpc"
            },
            "tags_all": {
              "Name": "tierdemovpc"
            }
          }
        }
      ]
    }
  ]
}